--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="header-container">
                 <h1 class="titoli">Email : <a href="mailto:prorezzago@hotmail.it" id="link">prorezzago@hotmail.it</a></h1>
                 <br>
-                <h1 class="titoli">Cellulare : 3313139661</h1>
+                <h1 class="titoli">Cellulare : <b id="number">3313139661</b></h1>
               </div>
                 <br>
                 <br>
